2019-02-04  Joseph Myers  <joseph@codesourcery.com>

	* malloc/malloc.c (tcache_get): Compare tcache->counts[tc_idx]
	with 0, not tcache->entries[tc_idx].

	* nscd/connections.c (reqinfo): Initialize SHUTDOWN element only
	once.

2019-02-04  Andreas Schwab  <schwab@suse.de>

	[BZ #16976]
	[BZ #17396]
	* posix/fnmatch_loop.c (internal_fnmatch, internal_fnwmatch): When
	looking up collating elements match against (wide) character
	sequence instead of name.  Correct alignment adjustment.
	* posix/fnmatch.c: Don't include "../locale/elem-hash.h".
	(WMEMCMP) [HANDLE_MULTIBYTE]: Define.
	* posix/Makefile (tests): Add tst-fnmatch4 and tst-fnmatch5.
	(LOCALES): Add cs_CZ.ISO-8859-2.
	* posix/tst-fnmatch4.c: New file.
	* posix/tst-fnmatch5.c: New file.
	* include/wchar.h (__wmemcmp): Declare.
	* wcsmbs/wmemcmp.c: Define __wmemcmp and add wmemcmp as weak alias.
	* sysdeps/i386/i686/multiarch/wmemcmp.c: Likewise.
	* sysdeps/x86_64/multiarch/wmemcmp.c: Likewise.
	* sysdeps/s390/wmemcmp.c: Likewise.

2019-02-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #24155]
	CVE-2019-7309
	* NEWS: Updated for CVE-2019-7309.
	* sysdeps/x86_64/memcmp.S: Use RDX_LP for size.  Clear the
	upper 32 bits of RDX register for x32.  Use unsigned Jcc
	instructions, instead of signed.
	* sysdeps/x86_64/x32/Makefile (tests): Add tst-size_t-memcmp-2.
	* sysdeps/x86_64/x32/tst-size_t-memcmp-2.c: New test.

2019-02-04  Florian Weimer  <fweimer@redhat.com>

	* posix/spawn.h (posix_spawn, posix_spawnp): Add __nonnull attribute.
	(posix_spawnattr_init, posix_spawnattr_destroy): Likewise.
	(posix_spawnattr_getsigdefault, posix_spawnattr_setsigdefault):
	Likewise.
	(posix_spawnattr_getsigmask, posix_spawnattr_setsigmask): Likewise.
	(posix_spawnattr_getflags, posix_spawnattr_setflags): Likewise.
	(posix_spawnattr_getpgroup, posix_spawnattr_setpgroup): Likewise.
	(posix_spawnattr_getschedpolicy, posix_spawnattr_setschedpolicy):
	Likewise.
	(posix_spawnattr_getschedparam, posix_spawnattr_setschedparam):
	Likewise.